// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with multiple expenses data 1`] = `
<div>
  <h1>
    Viewing 
    32
     
    expenses
     totalling 
    $983,274,932.47
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly with single expense data 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $94.34
  </h1>
</div>
`;
